// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render 1`] = `
<EuiForm
  className="kbnShareContextMenu__finalPanel"
  data-test-subj="shareUrlForm"
>
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText={
      <FormattedMessage
        defaultMessage="Can't share as saved object until the {objectType} has been saved."
        id="common.ui.share.urlPanel.canNotShareAsSavedObjectHelpText"
        values={
          Object {
            "objectType": "dashboard",
          }
        }
      />
    }
    label={
      <FormattedMessage
        defaultMessage="Generate the link as"
        id="common.ui.share.urlPanel.generateLinkAsLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiRadioGroup
      idSelected="snapshot"
      onChange={[Function]}
      options={
        Array [
          Object {
            "data-test-subj": "exportAsSnapshot",
            "id": "snapshot",
            "label": <EuiFlexGroup
              gutterSize="none"
            >
              <EuiFlexItem>
                <FormattedMessage
                  defaultMessage="Snapshot"
                  id="common.ui.share.urlPanel.snapshotLabel"
                  values={Object {}}
                />
              </EuiFlexItem>
              <EuiFlexItem
                grow={false}
              >
                <EuiIconTip
                  aria-label="Info"
                  content={
                    <FormattedMessage
                      defaultMessage="Snapshot URLs encode the current state of the {objectType} in the URL itself. Edits to the saved {objectType} won't be visible via this URL."
                      id="common.ui.share.urlPanel.snapshotDescription"
                      values={
                        Object {
                          "objectType": "dashboard",
                        }
                      }
                    />
                  }
                  position="bottom"
                  type="questionInCircle"
                />
              </EuiFlexItem>
            </EuiFlexGroup>,
          },
          Object {
            "data-test-subj": "exportAsSavedObject",
            "disabled": true,
            "id": "savedObject",
            "label": <EuiFlexGroup
              gutterSize="none"
            >
              <EuiFlexItem>
                <FormattedMessage
                  defaultMessage="Saved object"
                  id="common.ui.share.urlPanel.savedObjectLabel"
                  values={Object {}}
                />
              </EuiFlexItem>
              <EuiFlexItem
                grow={false}
              >
                <EuiIconTip
                  aria-label="Info"
                  content={
                    <FormattedMessage
                      defaultMessage="You can share this URL with people to let them load the most recent saved version of this {objectType}."
                      id="common.ui.share.urlPanel.savedObjectDescription"
                      values={
                        Object {
                          "objectType": "dashboard",
                        }
                      }
                    />
                  }
                  position="bottom"
                  type="questionInCircle"
                />
              </EuiFlexItem>
            </EuiFlexGroup>,
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    data-test-subj="createShortUrl"
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    labelType="label"
  >
    <EuiFlexGroup
      gutterSize="none"
    >
      <EuiFlexItem>
        <EuiSwitch
          checked={false}
          data-test-subj="useShortUrl"
          label={
            <FormattedMessage
              defaultMessage="Short URL"
              id="common.ui.share.urlPanel.shortUrlLabel"
              values={Object {}}
            />
          }
          onChange={[Function]}
        />
      </EuiFlexItem>
      <EuiFlexItem
        grow={false}
      >
        <EuiIconTip
          aria-label="Info"
          content={
            <FormattedMessage
              defaultMessage="We recommend sharing shortened snapshot URLs for maximum compatibility. Internet Explorer has URL length restrictions, and some wiki and markup parsers don't do well with the full-length version of the snapshot URL, but the short URL should work great."
              id="common.ui.share.urlPanel.shortUrlHelpText"
              values={Object {}}
            />
          }
          position="bottom"
          type="questionInCircle"
        />
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFormRow>
  <EuiCopy
    afterMessage="Copied"
    anchorClassName="kbnShareContextMenu__copyAnchor"
    textToCopy="http://localhost/"
  >
    <Component />
  </EuiCopy>
</EuiForm>
`;

exports[`should enable saved object export option when objectId is provided 1`] = `
<EuiForm
  className="kbnShareContextMenu__finalPanel"
  data-test-subj="shareUrlForm"
>
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Generate the link as"
        id="common.ui.share.urlPanel.generateLinkAsLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiRadioGroup
      idSelected="snapshot"
      onChange={[Function]}
      options={
        Array [
          Object {
            "data-test-subj": "exportAsSnapshot",
            "id": "snapshot",
            "label": <EuiFlexGroup
              gutterSize="none"
            >
              <EuiFlexItem>
                <FormattedMessage
                  defaultMessage="Snapshot"
                  id="common.ui.share.urlPanel.snapshotLabel"
                  values={Object {}}
                />
              </EuiFlexItem>
              <EuiFlexItem
                grow={false}
              >
                <EuiIconTip
                  aria-label="Info"
                  content={
                    <FormattedMessage
                      defaultMessage="Snapshot URLs encode the current state of the {objectType} in the URL itself. Edits to the saved {objectType} won't be visible via this URL."
                      id="common.ui.share.urlPanel.snapshotDescription"
                      values={
                        Object {
                          "objectType": "dashboard",
                        }
                      }
                    />
                  }
                  position="bottom"
                  type="questionInCircle"
                />
              </EuiFlexItem>
            </EuiFlexGroup>,
          },
          Object {
            "data-test-subj": "exportAsSavedObject",
            "disabled": false,
            "id": "savedObject",
            "label": <EuiFlexGroup
              gutterSize="none"
            >
              <EuiFlexItem>
                <FormattedMessage
                  defaultMessage="Saved object"
                  id="common.ui.share.urlPanel.savedObjectLabel"
                  values={Object {}}
                />
              </EuiFlexItem>
              <EuiFlexItem
                grow={false}
              >
                <EuiIconTip
                  aria-label="Info"
                  content={
                    <FormattedMessage
                      defaultMessage="You can share this URL with people to let them load the most recent saved version of this {objectType}."
                      id="common.ui.share.urlPanel.savedObjectDescription"
                      values={
                        Object {
                          "objectType": "dashboard",
                        }
                      }
                    />
                  }
                  position="bottom"
                  type="questionInCircle"
                />
              </EuiFlexItem>
            </EuiFlexGroup>,
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    data-test-subj="createShortUrl"
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    labelType="label"
  >
    <EuiFlexGroup
      gutterSize="none"
    >
      <EuiFlexItem>
        <EuiSwitch
          checked={false}
          data-test-subj="useShortUrl"
          label={
            <FormattedMessage
              defaultMessage="Short URL"
              id="common.ui.share.urlPanel.shortUrlLabel"
              values={Object {}}
            />
          }
          onChange={[Function]}
        />
      </EuiFlexItem>
      <EuiFlexItem
        grow={false}
      >
        <EuiIconTip
          aria-label="Info"
          content={
            <FormattedMessage
              defaultMessage="We recommend sharing shortened snapshot URLs for maximum compatibility. Internet Explorer has URL length restrictions, and some wiki and markup parsers don't do well with the full-length version of the snapshot URL, but the short URL should work great."
              id="common.ui.share.urlPanel.shortUrlHelpText"
              values={Object {}}
            />
          }
          position="bottom"
          type="questionInCircle"
        />
      </EuiFlexItem>
    </EuiFlexGroup>
  </EuiFormRow>
  <EuiCopy
    afterMessage="Copied"
    anchorClassName="kbnShareContextMenu__copyAnchor"
    textToCopy="http://localhost/"
  >
    <Component />
  </EuiCopy>
</EuiForm>
`;

exports[`should hide short url section when allowShortUrl is false 1`] = `
<EuiForm
  className="kbnShareContextMenu__finalPanel"
  data-test-subj="shareUrlForm"
>
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    label={
      <FormattedMessage
        defaultMessage="Generate the link as"
        id="common.ui.share.urlPanel.generateLinkAsLabel"
        values={Object {}}
      />
    }
    labelType="label"
  >
    <EuiRadioGroup
      idSelected="snapshot"
      onChange={[Function]}
      options={
        Array [
          Object {
            "data-test-subj": "exportAsSnapshot",
            "id": "snapshot",
            "label": <EuiFlexGroup
              gutterSize="none"
            >
              <EuiFlexItem>
                <FormattedMessage
                  defaultMessage="Snapshot"
                  id="common.ui.share.urlPanel.snapshotLabel"
                  values={Object {}}
                />
              </EuiFlexItem>
              <EuiFlexItem
                grow={false}
              >
                <EuiIconTip
                  aria-label="Info"
                  content={
                    <FormattedMessage
                      defaultMessage="Snapshot URLs encode the current state of the {objectType} in the URL itself. Edits to the saved {objectType} won't be visible via this URL."
                      id="common.ui.share.urlPanel.snapshotDescription"
                      values={
                        Object {
                          "objectType": "dashboard",
                        }
                      }
                    />
                  }
                  position="bottom"
                  type="questionInCircle"
                />
              </EuiFlexItem>
            </EuiFlexGroup>,
          },
          Object {
            "data-test-subj": "exportAsSavedObject",
            "disabled": false,
            "id": "savedObject",
            "label": <EuiFlexGroup
              gutterSize="none"
            >
              <EuiFlexItem>
                <FormattedMessage
                  defaultMessage="Saved object"
                  id="common.ui.share.urlPanel.savedObjectLabel"
                  values={Object {}}
                />
              </EuiFlexItem>
              <EuiFlexItem
                grow={false}
              >
                <EuiIconTip
                  aria-label="Info"
                  content={
                    <FormattedMessage
                      defaultMessage="You can share this URL with people to let them load the most recent saved version of this {objectType}."
                      id="common.ui.share.urlPanel.savedObjectDescription"
                      values={
                        Object {
                          "objectType": "dashboard",
                        }
                      }
                    />
                  }
                  position="bottom"
                  type="questionInCircle"
                />
              </EuiFlexItem>
            </EuiFlexGroup>,
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiCopy
    afterMessage="Copied"
    anchorClassName="kbnShareContextMenu__copyAnchor"
    textToCopy="http://localhost/"
  >
    <Component />
  </EuiCopy>
</EuiForm>
`;
